--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "google-maps-react": "^2.0.6",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
