--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "google-maps-react": "^2.0.6",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^6.7.0",
+    "react-router-dom": "^6.7.0",
     "react-search-autocomplete": "^8.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.2",
