--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "start": "export NODE_ENV=development; nodemon server/server.js",
     "build": "webpack",
     "dev": "webpack serve --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "globalSetup": "./jest-setup.js",
+    "globalTeardown": "./jest-teardown.js",
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
+  },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -38,6 +49,10 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-puppeteer": "^6.1.0",
+    "puppeteer": "^14.2.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
