--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@googlemaps/jest-mocks": "^2.7.5",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +29,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
@@ -57,6 +59,7 @@
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "supertest": "^6.2.3",
     "webpack": "^5.75.0"
   }
 }
